--- a/style.css
+++ b/style.css
@@ -70,9 +70,9 @@
 
 .hero{
     width: 100vw;
-    height: 85vh;
-    background-image: url("assets/top/m508-aethera.jpg");
-    background-size: 120%;
+    height:100vh;
+    background-image: url("assets/general/monolithHero.png");
+    background-size: 103%;
     background-position: center;
     font: white;
     position: relative;
@@ -83,40 +83,42 @@
 
 .centerWrap{
     position: absolute;
-    text-align: center;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
+    left: 25px;
+    top: 30%;
     /* background: rgb(255,255,255);
     background: linear-gradient(90deg, rgba(255,255,255,0) 0%, rgba(255,255,255,0) 20%, rgba(255,255,255,1) 50%, rgba(255,255,255,0) 80%); */
-    background: rgb(255,255,255);
-    background: radial-gradient(circle, rgba(255,255,255,0.8253676470588236) 0%, rgba(255,255,255,0) 69%);
-    height: 100%;    
-    width: 100vw;
+    /* background: rgb(255,255,255);
+    background: radial-gradient(circle, rgba(255,255,255,0.8253676470588236) 0%, rgba(255,255,255,0) 69%); */
     display:flex;
-    justify-content: center;
-    align-items: center;
+    justify-content: flex-start;
+    align-items: flex-start;
     flex-direction: column;
 }
 
 .logo{
-    margin: 0 auto;
     position: relative;
-    width: 35%;
+    width: 55px;
+    margin: 7px 0 7px 12px;
+    z-index: 100;
 }
 
-.logo > img{
-    width: 90%;
-    margin: 20px;
+.header{
+    width: 100vw;
+    z-index:100;
+    top:0px;
+    position: fixed;
+    background: rgb(131, 131, 131);
+    border-bottom:solid 2px rgb(31, 31, 31) ;
 }
 
 .title{
     position: relative;
-    color: rgb(0, 0, 0);
+    color: rgb(241, 241, 241);
     font-weight: 900;
-    font-size: 2.8rem;
-    margin-bottom: 20px;
+    font-size: 3.5rem;
+    padding: 10px 20px;
     letter-spacing: 3px;
+    background: black;
 }
 
 .main{
@@ -138,7 +140,7 @@ background: linear-gradient(152deg, rgba(2,0,36,1) 0%, rgba(9,121,87,1) 0%, rgba
 
 .infoImg{
     position: relative;
-    background-image: url('assets/top/m508-redShift.jpg');
+    background-image: url('assets/general/m330-redshift-top.jpg');
     background-position: center;
     background-repeat: no-repeat;
     background-size: 120%;
