--- a/style.css
+++ b/style.css
@@ -4,6 +4,10 @@
     font-family: 'Roboto', sans-serif;
 }
 
+label {
+    outline: 0 !important;
+}
+
 .container{
     position: relative;
 }
@@ -70,7 +74,7 @@
 
 .hero{
     width: 100vw;
-    height:100vh;
+    height:90vh;
     background-image: url("assets/general/monolithHero.png");
     background-size: 103%;
     background-position: center;
@@ -84,7 +88,7 @@
 .centerWrap{
     position: absolute;
     left: 25px;
-    top: 30%;
+    top: 15%;
     /* background: rgb(255,255,255);
     background: linear-gradient(90deg, rgba(255,255,255,0) 0%, rgba(255,255,255,0) 20%, rgba(255,255,255,1) 50%, rgba(255,255,255,0) 80%); */
     /* background: rgb(255,255,255);
@@ -97,9 +101,8 @@
 
 .logo{
     position: relative;
-    width: 55px;
-    margin: 7px 0 7px 12px;
-    z-index: 100;
+    width: 25%;
+    margin: 7px 0 40px 12px;
 }
 
 .header{
@@ -343,16 +346,11 @@ background: linear-gradient(152deg, rgba(2,0,36,1) 0%, rgba(9,121,87,1) 0%, rgba
 .btnSelectWrap{
     display:flex;
     justify-content: space-between;
+    margin-bottom: 2rem;
 }
 
 .selectWrap{
-    display:flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-around;
-    width: 45%;
-    border: solid 1px rgb(226, 226, 226);
-    padding: 7px;
+    margin-right:1.5rem;
 }
 
 .sizeSelect{
@@ -360,12 +358,104 @@ background: linear-gradient(152deg, rgba(2,0,36,1) 0%, rgba(9,121,87,1) 0%, rgba
 }
 
 .buyBtn{
-    font-size: 17px;
-    background:green;
-    width:150px;
-    padding: 10px;
-    border: solid 1px black;
+    font-size: .7rem;
+    background:rgb(23, 212, 23);
+    padding: .7rem 2rem;
     border-radius: 5px;
     color: white;
-    align-self: flex-end;
+    align-self: center;
 }
+
+
+/* RADIO BUTTON */
+
+/* TOGGLE STYLING */
+.toggle {
+    box-sizing: border-box;
+    font-size: 0;
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: flex-start;
+    align-items: stretch;
+  }
+  .toggle input {
+    width: 0;
+    height: 0;
+    position: absolute;
+    left: -9999px;
+  }
+  .toggle input + label {
+    margin: 0;
+    padding: .7rem 2rem;
+    box-sizing: border-box;
+    position: relative;
+    display: inline-block;
+    border: solid 1px #DDD;
+    background-color: #FFF;
+    font-size: .7rem;
+    line-height: 140%;
+    font-weight: 600;
+    text-align: center;
+    box-shadow: 0 0 0 rgba(255, 255, 255, 0);
+    transition: border-color .15s ease-out,  color .25s ease-out,  background-color .15s ease-out, box-shadow .15s ease-out;
+    /* ADD THESE PROPERTIES TO SWITCH FROM AUTO WIDTH TO FULL WIDTH */
+    /*flex: 0 0 50%; display: flex; justify-content: center; align-items: center;*/
+    /* ----- */
+  }
+  .toggle input + label:first-of-type {
+    border-radius: 6px 0 0 6px;
+    border-right: none;
+  }
+  .toggle input + label:last-of-type {
+    border-radius: 0 6px 6px 0;
+    border-left: none;
+  }
+  .toggle input:hover + label {
+    border-color: #213140;
+  }
+  .toggle input:checked + label {
+    background-color: #4B9DEA;
+    color: #FFF;
+    box-shadow: 0 0 10px rgba(102, 179, 251, 0.5);
+    border-color: #4B9DEA;
+    z-index: 1;
+  }
+  .toggle input:focus + label {
+    outline: dotted 1px #CCC;
+    outline-offset: .45rem;
+  }
+  @media (max-width: 800px) {
+    .toggle input + label {
+      padding: .75rem .25rem;
+      flex: 0 0 50%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+  }
+  
+  /* STYLING FOR THE STATUS HELPER TEXT FOR THE DEMO */
+  .status {
+    margin: 0;
+    font-size: 1rem;
+    font-weight: 400;
+  }
+  .status span {
+    font-weight: 600;
+    color: #B6985A;
+  }
+  .status span:first-of-type {
+    display: inline;
+  }
+  .status span:last-of-type {
+    display: none;
+  }
+  @media (max-width: 800px) {
+    .status span:first-of-type {
+      display: none;
+    }
+    .status span:last-of-type {
+      display: inline;
+    }
+  }
+  
